# Dev-Tooling-Chat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  styles.py
.github/workflows/: ci.yml
.streamlit/: config.toml
prompts/: code_audit.txt  mr_assistant.txt  repo_recrutement.txt
src/dev_tooling_chat/: __init__.py  styles.py  utils.py
tests/: verify_map_reduce.py
views/: __init__.py  audit_diagnostic.py  code_review.py  merge_request.py
